--- a/studyspaceapp/frontend/package.json
+++ b/studyspaceapp/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
